# binary-search-tree

./: .gitignore  CMakeLists.txt  README.md  makefile
app/: app.c
src/: binary_search_tree.c  binary_search_tree.h  main.c
